Add method to get visible voltageLevels
Signed-off-by: Thomas ADAM <tadam@silicom.fr>